--- a/admin.html
+++ b/admin.html
@@ -13,11 +13,11 @@
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
-      background: linear-gradient(to bottom right, #1e3a8a, #9333ea);
-      color: #f8fafc;
+      background: linear-gradient(to bottom right, #a78bfa, #f9a8d4);
+      color: #1e293b;
     }
     header {
-      background: linear-gradient(to right, #0ea5e9, #6366f1);
+      background: linear-gradient(to right, #4c1d95, #ec4899);
       color: white;
       padding: 1.5rem;
       display: flex;
@@ -42,7 +42,7 @@
     }
     .tabs button {
       padding: 0.7rem 1.2rem;
-      background: #3b82f6;
+      background: #8b5cf6;
       border: none;
       border-radius: 12px;
       font-weight: 600;
@@ -51,28 +51,28 @@
       transition: background 0.3s ease;
     }
     .tabs button.active {
-      background: #9333ea;
+      background: #ec4899;
     }
     section {
       display: none;
       margin: 1rem auto;
       padding: 1.5rem;
       width: 95%;
-      max-width: 900px;
+      max-width: 950px;
       border-radius: 16px;
-      background: linear-gradient(to right bottom, #1e293b, #4c1d95);
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.25);
+      background: linear-gradient(to right bottom, #fce7f3, #ddd6fe);
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     }
     section.active {
       display: block;
     }
     .card {
-      background: linear-gradient(to bottom, #3b0764, #312e81);
+      background: linear-gradient(to bottom, #f9a8d4, #d8b4fe);
       border-radius: 12px;
       padding: 1rem;
       margin-bottom: 1.5rem;
-      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-      color: #e0f2fe;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
+      color: #111827;
     }
     input, textarea {
       width: 100%;
@@ -81,40 +81,6 @@
       border: none;
       margin-top: 8px;
       font-size: 1rem;
-      background-color: #0f172a;
-      color: #f8fafc;
-    }
-    input::placeholder, textarea::placeholder {
-      color: #94a3b8;
-    }
-    button {
-      background: #10b981;
-      color: white;
-      border: none;
-      padding: 0.5rem 1rem;
-      border-radius: 8px;
-      margin-top: 10px;
-      cursor: pointer;
-      font-weight: bold;
-    }
-    .material-item {
-      background: #0f172a;
-      padding: 0.75rem;
-      margin-bottom: 0.5rem;
-      border-radius: 8px;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      color: #f1f5f9;
-    }
-    .material-item span { flex: 1; }
-    .material-item button {
-      background: #ef4444;
-      border: none;
-      padding: 0.3rem 0.6rem;
-      color: white;
-      border-radius: 6px;
-      cursor: pointer;
     }
   </style>
 </head>
@@ -124,230 +90,154 @@
     <button class="logout-btn" onclick="logoutUser()">Logout</button>
   </header>
   <div class="tabs">
-    <button class="tab-link active" data-tab="downloads">Downloads</button>
+    <button class="tab-link active" data-tab="home">Home</button>
+    <button class="tab-link" data-tab="announcements">Announcements</button>
+    <button class="tab-link" data-tab="events">Events</button>
+    <button class="tab-link" data-tab="cbt">CBT</button>
+    <button class="tab-link" data-tab="lostfound">Lost & Found</button>
+    <button class="tab-link" data-tab="leaderboard">Leaderboard</button>
+    <button class="tab-link" data-tab="feedback">Feedback</button>
+    <button class="tab-link" data-tab="downloads">Downloads</button>
     <button class="tab-link" data-tab="settings">Settings</button>
-    <!-- Add other tabs here -->
-  </div>  <section id="downloads" class="active">
-    <h3>Materials Upload</h3>
+  </div>
+  <!-- CHUNK 5–9: Home Manager, Announcements, Events, CBT, Lost & Found Sections -->
+  <section id="home">
+    <h3>Home Manager</h3>
     <div class="card">
-      <input type="text" id="materialTitle" placeholder="Material Title">
-      <textarea id="materialDesc" placeholder="Short description (optional)"></textarea>
-      <input type="text" id="materialLink" placeholder="Download Link (e.g., Google Drive)">
-      <button onclick="uploadMaterial()">Upload Material</button>
+      <h4>Add Finance Tip</h4>
+      <textarea id="tipInput" rows="3" placeholder="Enter a new tip..."></textarea>
+      <button onclick="addFinanceTip()">Add Tip</button>
+      <ul id="tipList"></ul>
     </div>
+
     <div class="card">
-      <h4>Uploaded Materials</h4>
-      <div id="materialsList"></div>
+      <h4>Add Birthday</h4>
+      <input type="text" id="bdayName" placeholder="Student's Name" />
+      <input type="date" id="bdayDate" />
+      <input type="file" id="bdayImage" accept="image/*" />
+      <button onclick="addBirthday()">Add Birthday</button>
+      <ul id="birthdayList"></ul>
     </div>
-  </section>
-  <!-- SETTINGS SECTION -->
-  <section id="settings">
-    <h3>Site Settings</h3>
+
     <div class="card">
-      <h4>Maintenance Mode</h4>
-      <label style="display: flex; align-items: center; gap: 10px;">
-        <input type="checkbox" id="maintenanceToggle" onchange="toggleMaintenance()" />
-        <span>Enable Maintenance Mode</span>
-      </label>
-    </div>
-    <div class="card">
-      <h4>Theme Mode</h4>
-      <label style="display: flex; align-items: center; gap: 10px;">
-        <input type="checkbox" id="darkModeToggle" onchange="toggleDarkMode()" />
-        <span>Dark Mode</span>
-      </label>
+      <h4>Upload Ad Banner</h4>
+      <input type="file" id="adImage" accept="image/*" />
+      <img id="adPreview" src="" alt="Preview" style="max-height: 150px; display: none;" />
+      <input type="text" id="adLink" placeholder="Ad redirect link (optional)" />
+      <button onclick="uploadAd()">Upload Ad</button>
     </div>
   </section>
 
-  <!-- FEEDBACK SECTION -->
-  <section id="feedback">
-    <h3>Feedback</h3>
+  <section id="announcements">
+    <h3>Announcements</h3>
     <div class="card">
-      <ul id="feedbackList" style="list-style: none; padding: 0;"></ul>
+      <h4>New Announcement</h4>
+      <textarea id="announceInput" rows="3" placeholder="Type announcement..."></textarea>
+      <button onclick="postAnnouncement()">Post Announcement</button>
+    </div>
+    <div class="card">
+      <h4>Posted Announcements</h4>
+      <ul id="announcementList"></ul>
     </div>
   </section>
 
-  <!-- LEADERBOARD SECTION -->
-  <section id="leaderboard">
-    <h3>Leaderboard (Coming Soon)</h3>
+  <section id="events">
+    <h3>Events</h3>
     <div class="card">
-      <p>Here you’ll manage top performers once CBT system is active.</p>
+      <h4>Create New Event</h4>
+      <input type="text" id="eventTitle" placeholder="Event Title" />
+      <textarea id="eventDescription" rows="3" placeholder="Event Description..."></textarea>
+      <input type="date" id="eventDate" />
+      <button onclick="addEvent()">Add Event</button>
+    </div>
+    <div class="card">
+      <h4>Upcoming Events</h4>
+      <ul id="eventList"></ul>
     </div>
   </section>
 
-  <!-- LOST & FOUND SECTION -->
-  <section id="lostfound">
-    <h3>Lost & Found Submissions</h3>
-    <div class="card">
-      <ul id="lostFoundList" style="list-style-type: none;"></ul>
-    </div>
-  </section>
-
-  <!-- CBT SECTION -->
   <section id="cbt">
-    <h3>CBT Question Manager</h3>
+    <h3>CBT Manager</h3>
     <div class="card">
-      <input type="text" id="cbtSubject" placeholder="Subject (e.g. Economics)">
-      <textarea id="cbtQuestion" placeholder="Enter question..."></textarea>
-      <input type="text" id="optionA" placeholder="Option A">
-      <input type="text" id="optionB" placeholder="Option B">
-      <input type="text" id="optionC" placeholder="Option C">
-      <input type="text" id="optionD" placeholder="Option D">
-      <input type="text" id="correctAnswer" placeholder="Correct Option (A, B, C, or D)">
-      <br><br>
+      <h4>Upload Question</h4>
+      <input type="text" id="cbtSubject" placeholder="Subject (e.g. Economics)" />
+      <textarea id="cbtQuestion" rows="3" placeholder="Enter question..."></textarea>
+      <input type="text" id="optionA" placeholder="Option A" />
+      <input type="text" id="optionB" placeholder="Option B" />
+      <input type="text" id="optionC" placeholder="Option C" />
+      <input type="text" id="optionD" placeholder="Option D" />
+      <input type="text" id="correctAnswer" placeholder="Correct Option (A, B, C, or D)" />
       <button onclick="addCBTQuestion()">Upload Question</button>
     </div>
   </section>
-  <!-- CHUNK 10-14: Scripts and Functional Logic --><script>
-  // Initialize Firebase
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.appspot.com",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const db = firebase.firestore();
-  const auth = firebase.auth();
 
-  // Tab navigation
-  const tabLinks = document.querySelectorAll(".tab-link");
-  const sections = document.querySelectorAll("section");
-  tabLinks.forEach(link => {
-    link.addEventListener("click", () => {
-      tabLinks.forEach(btn => btn.classList.remove("active"));
-      link.classList.add("active");
-      const tab = link.getAttribute("data-tab");
-      sections.forEach(sec => sec.classList.remove("active"));
-      document.getElementById(tab).classList.add("active");
-    });
-  });
+  <section id="lostfound">
+    <h3>Lost & Found</h3>
+    <div class="card">
+      <h4>Review Submissions</h4>
+      <ul id="lostFoundList"></ul>
+    </div>
+  </section>
+  <!-- CHUNK 10–14: Leaderboard, Feedback, and Settings Sections -->
 
-  // Logout
-  function logoutUser() {
-    auth.signOut().then(() => {
-      window.location.href = "email-login.html";
-    });
-  }
+  <section id="leaderboard">
+    <h3>Leaderboard</h3>
+    <div class="card">
+      <h4>Student Scores</h4>
+      <ul id="leaderboardList"></ul>
+    </div>
+  </section>
 
-  // Announcements
-  function postAnnouncement() {
-    const content = document.getElementById("announceInput").value;
-    if (!content.trim()) return;
-    db.collection("announcements").add({ content, timestamp: Date.now() });
-    document.getElementById("announceInput").value = "";
-    loadAnnouncements();
-  }
-  function loadAnnouncements() {
-    const list = document.getElementById("announcementList");
-    list.innerHTML = "";
-    db.collection("announcements").orderBy("timestamp", "desc").get().then(snapshot => {
-      snapshot.forEach(doc => {
-        const li = document.createElement("li");
-        li.textContent = doc.data().content;
-        list.appendChild(li);
+  <section id="feedback">
+    <h3>Feedback</h3>
+    <div class="card">
+      <h4>Submitted Feedback</h4>
+      <ul id="feedbackList" style="list-style: none; padding-left: 0;"></ul>
+    </div>
+  </section>
+
+  <section id="settings">
+    <h3>Admin Settings</h3>
+    <div class="card">
+      <h4>Maintenance Mode</h4>
+      <label>
+        <input type="checkbox" id="maintenanceToggle" />
+        Enable Maintenance Mode
+      </label>
+    </div>
+
+    <div class="card">
+      <h4>Dashboard Welcome Text</h4>
+      <input type="text" id="welcomeText" placeholder="Welcome message for dashboard" />
+    </div>
+
+    <div class="card">
+      <h4>Custom Alert Message</h4>
+      <textarea id="adminAlert" rows="3" placeholder="Write a site-wide alert message (optional)"></textarea>
+    </div>
+
+    <div class="card">
+      <button onclick="saveAdminSettings()">Save Settings</button>
+      <p id="settingsSavedMsg" style="color: green; display: none;">Settings saved successfully!</p>
+    </div>
+  </section>
+
+  <script>
+    document.querySelectorAll(".tab-link").forEach((btn) => {
+      btn.addEventListener("click", () => {
+        document.querySelectorAll(".tab-link").forEach((b) => b.classList.remove("active"));
+        document.querySelectorAll("section").forEach((s) => s.classList.remove("active"));
+
+        btn.classList.add("active");
+        document.getElementById(btn.dataset.tab).classList.add("active");
       });
     });
-  }
 
-  // Events
-  function addEvent() {
-    const title = document.getElementById("eventTitle").value;
-    const desc = document.getElementById("eventDescription").value;
-    const date = document.getElementById("eventDate").value;
-    if (!title || !date) return;
-    db.collection("events").add({ title, desc, date });
-    document.getElementById("eventTitle").value = "";
-    document.getElementById("eventDescription").value = "";
-    document.getElementById("eventDate").value = "";
-    loadEvents();
-  }
-  function loadEvents() {
-    const eventList = document.getElementById("eventList");
-    eventList.innerHTML = "";
-    db.collection("events").orderBy("date").get().then(snapshot => {
-      snapshot.forEach(doc => {
-        const item = document.createElement("li");
-        item.textContent = `${doc.data().title} - ${doc.data().date}`;
-        eventList.appendChild(item);
+    function logoutUser() {
+      firebase.auth().signOut().then(() => {
+        window.location.href = "email-login.html";
       });
-    });
-  }
-
-  // Finance Tips
-  function addFinanceTip() {
-    const input = document.getElementById("tipInput").value;
-    if (!input.trim()) return;
-    db.collection("financeTips").add({ tip: input });
-    document.getElementById("tipInput").value = "";
-    loadTips();
-  }
-  function loadTips() {
-    const tipList = document.getElementById("tipList");
-    tipList.innerHTML = "";
-    db.collection("financeTips").get().then(snapshot => {
-      snapshot.forEach(doc => {
-        const li = document.createElement("li");
-        li.textContent = doc.data().tip;
-        tipList.appendChild(li);
-      });
-    });
-  }
-
-  // CBT
-  function addCBTQuestion() {
-    const subject = document.getElementById("cbtSubject").value;
-    const question = document.getElementById("cbtQuestion").value;
-    const a = document.getElementById("optionA").value;
-    const b = document.getElementById("optionB").value;
-    const c = document.getElementById("optionC").value;
-    const d = document.getElementById("optionD").value;
-    const correct = document.getElementById("correctAnswer").value;
-    if (!subject || !question || !a || !b || !c || !d || !correct) return;
-    db.collection("cbt").add({ subject, question, options: { a, b, c, d }, correct });
-  }
-
-  // Materials
-  async function uploadMaterial() {
-    const title = document.getElementById("materialTitle").value;
-    const desc = document.getElementById("materialDesc").value;
-    const link = document.getElementById("materialLink").value;
-    if (!title || !link) return;
-    const res = await fetch("https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/325bec14-accd-4dc4-89d5-87a84da74c36");
-    const data = await res.json();
-    data.push({ title, desc, link });
-    await fetch("https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/325bec14-accd-4dc4-89d5-87a84da74c36", {
-      method: "PUT",
-      headers: { "Content-Type": "application/json" },
-      body: JSON.stringify(data)
-    });
-    loadMaterials();
-  }
-  async function loadMaterials() {
-    const list = document.getElementById("materialsList");
-    list.innerHTML = "";
-    const res = await fetch("https://api.jsonstorage.net/v1/json/d33236c3-a3da-4c87-8d18-eeeb899d034a/325bec14-accd-4dc4-89d5-87a84da74c36");
-    const materials = await res.json();
-    materials.forEach((mat, i) => {
-      const div = document.createElement("div");
-      div.className = "material-item";
-      div.innerHTML = `<span><strong>${mat.title}</strong><br>${mat.desc || ""}</span><a href="${mat.link}" target="_blank">Download</a>`;
-      list.appendChild(div);
-    });
-  }
-
-  // Load all on auth ready
-  auth.onAuthStateChanged(user => {
-    if (user && user.email === "ayubaboluwatife246@gmail.com") {
-      loadTips();
-      loadEvents();
-      loadAnnouncements();
-      loadMaterials();
-    } else {
-      window.location.href = "email-login.html";
     }
-  });
-</script></body>
+  </script>
+</body>
 </html>
